Remove Sonar Violations