@@ -57,7 +57,7 @@ public class KiteOrmExample
 	private Date updatedDate = new Date();
 	
 	@Column(name = "PAGE_COUNT")
-	private Integer pageCount = new Integer(2);
+	private Integer pageCount = Integer.valueOf(2);
 	
 	
 	public final Integer getPageCount()
@@ -244,7 +244,7 @@ public class KiteOrmExample
 	 */
 	public final Date getCreatedDate()
 	{
-		return createdDate;
+		return (Date)createdDate.clone();
 	}
 	
 	/**
@@ -253,7 +253,7 @@ public class KiteOrmExample
 	 */
 	public final void setCreatedDate(Date createdDate)
 	{
-		this.createdDate = createdDate;
+		this.createdDate = (Date)createdDate.clone();
 	}
 	
 	/**
@@ -278,7 +278,7 @@ public class KiteOrmExample
 	 */
 	public final Date getUpdatedDate()
 	{
-		return updatedDate;
+		return (Date)updatedDate.clone();
 	}
 	
 	/**
@@ -286,7 +286,7 @@ public class KiteOrmExample
 	 */
 	public final void setUpdatedDate(Date updatedDate)
 	{
-		this.updatedDate = updatedDate;
+		this.updatedDate = (Date)updatedDate.clone();
 	}
 	
 	@Override
